--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/atme/advent-of-code-2022#readme",
   "devDependencies": {
     "@types/jest": "^29.2.3",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.10",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
@@ -27,5 +28,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
